--- a/chem_lib/elements.yaml
+++ b/chem_lib/elements.yaml
@@ -1,6 +1,7 @@
 # density is in grams per cubic centimeter
 "H":
     name: Hydrogen
+    electronegativity: 2.2
     protons: 1
     valence_shells: [ 1s1 ]
     mass: 1.008
@@ -12,6 +13,7 @@
     classification: non_metal
 "He":
     name: Helium
+    electronegativity: null
     protons: 2
     valence_shells: [ 1s2 ]
     mass: 4.002602
@@ -23,6 +25,7 @@
     classification: noble_gas
 "Li":
     name: Lithium
+    electronegativity: 0.98
     protons: 3
     valence_shells: [ 2s1 ]
     mass: 6.94
@@ -34,6 +37,7 @@
     classification: alkaili_metal
 "Be":
     name: Beryllium
+    electronegativity: 1.57
     protons: 4
     valence_shells: [ 2s2 ]
     mass: 9.0121831
@@ -45,6 +49,7 @@
     classification: alkaline_earth_metal
 "B":
     name: Boron
+    electronegativity: 2.04
     protons: 5
     valence_shells: [ 2s2, 2p1 ]
     mass: 10.81
@@ -56,6 +61,7 @@
     classification: metaloid
 "C":
     name: Carbon
+    electronegativity: 2.55
     protons: 6
     valence_shells: [ 2s2, 2p2 ]
     mass: 12.011
@@ -68,6 +74,7 @@
     ionization_energy: 1086.454 # kj mol^-1
 "N":
     name: Nitrogen
+    electronegativity: 3.04
     protons: 7
     valence_shells: [ 2s2, 2p3 ]
     mass: 14.007
@@ -80,6 +87,7 @@
     ionization_energy: 1402.328
 "O":
     name: Oxygen
+    electronegativity: 3.44
     protons: 8
     valence_shells: [ 2s2, 2p4 ]
     mass: 15.999
@@ -92,6 +100,7 @@
     ionization_energy: 1313.942
 "F":
     name: Fluorine
+    electronegativity: 3.98
     protons: 9
     valence_shells: [ 2s2, 2p5 ]
     mass: 18.998403163
@@ -104,6 +113,7 @@
     ionization_energy: 1681.045
 "Ne":
     name: Neon
+    electronegativity: null
     protons: 10
     valence_shells: [ 2s2, 2p6 ]
     mass: 20.1797
@@ -115,6 +125,7 @@
     classification: noble_gas
 "Na":
     name: Sodium
+    electronegativity: 0.93
     protons: 11
     valence_shells: [ 3s1 ]
     mass: 22.98976928
@@ -126,6 +137,7 @@
     classification: alkaili_metal
 "Mg":
     name: Magnesium
+    electronegativity: 1.31
     protons: 12
     valence_shells: [ 3s2 ]
     mass: 24.305
@@ -137,6 +149,7 @@
     classification: alkaline_earth_metal
 "Al":
     name: Aluminum
+    electronegativity: 1.61
     protons: 13
     valence_shells: [ 3s2, 3p1 ]
     mass: 26.9815384
@@ -148,6 +161,7 @@
     classification: post_transition_metal
 "Si":
     name: Silicon
+    electronegativity: 1.9
     protons: 14
     valence_shells: [ 3s2, 3p2 ]
     mass: 28.085
@@ -159,6 +173,7 @@
     classification: metaloid
 "P":
     name: Phosphorus
+    electronegativity: 2.19
     protons: 15
     valence_shells: [ 3s2, 3p3 ]
     mass: 30.973761998
@@ -170,6 +185,7 @@
     classification: non_metal
 "S":
     name: Sulfur
+    electronegativity: 2.58
     protons: 16
     valence_shells: [ 3s2, 3p4 ]
     mass: 32.06
@@ -181,6 +197,7 @@
     classification: non_metal
 "Cl":
     name: Chlorine
+    electronegativity: 3.16
     protons: 17
     valence_shells: [ 3s2, 3p5 ]
     mass: 35.45
@@ -192,6 +209,7 @@
     classification: non_metal
 "Ar":
     name: Argon
+    electronegativity: null
     protons: 18
     valence_shells: [ 3s2, 3p6 ]
     mass: 39.948
@@ -203,6 +221,7 @@
     classification: noble_gas
 "K":
     name: Potassium
+    electronegativity: 0.82
     protons: 19
     valence_shells: [ 4s1 ]
     mass: 39.0983
@@ -214,6 +233,7 @@
     classification: alkaili_metal
 "Ca":
     name: Calcium
+    electronegativity: 1
     protons: 20
     valence_shells: [ 4s2 ]
     mass: 40.078
@@ -225,6 +245,7 @@
     classification: alkaline_earth_metal
 "Sc":
     name: Scandium
+    electronegativity: 1.36
     protons: 21
     valence_shells: [ 3d1, 4s2 ]
     mass: 44.955908
@@ -236,6 +257,7 @@
     classification: transition_metal
 "Ti":
     name: Titanium
+    electronegativity: 1.54
     protons: 22
     valence_shells: [ 3d2, 4s2 ]
     mass: 47.867
@@ -247,6 +269,7 @@
     classification: transition_metal
 "V":
     name: Vanadium
+    electronegativity: 1.63
     protons: 23
     valence_shells: [ 3d3, 4s2 ]
     mass: 50.9415
@@ -258,6 +281,7 @@
     classification: transition_metal
 "Cr":
     name: Chromium
+    electronegativity: 1.66
     protons: 24
     valence_shells: [ 3d5, 4s1 ]
     mass: 51.9961
@@ -269,6 +293,7 @@
     classification: transition_metal
 "Mn":
     name: Manganese
+    electronegativity: 1.55
     protons: 25
     valence_shells: [ 3d5, 4s2 ]
     mass: 54.938043
@@ -280,6 +305,7 @@
     classification: transition_metal
 "Fe":
     name: Iron
+    electronegativity: 1.83
     protons: 26
     valence_shells: [ 3d6, 4s2 ]
     mass: 55.845
@@ -291,6 +317,7 @@
     classification: transition_metal
 "Co":
     name: Cobalt
+    electronegativity: 1.88
     protons: 27
     valence_shells: [ 3d7, 4s2 ]
     mass: 58.933194
@@ -302,6 +329,7 @@
     classification: transition_metal
 "Ni":
     name: Nickel
+    electronegativity: 1.91
     protons: 28
     valence_shells: [ 3d8, 4s2 ]
     mass: 58.6934
@@ -313,6 +341,7 @@
     classification: transition_metal
 "Cu":
     name: Copper
+    electronegativity: 1.9
     protons: 29
     valence_shells: [ 3d10, 4s1 ]
     mass: 63.546
@@ -324,6 +353,7 @@
     classification: transition_metal
 "Zn":
     name: Zinc
+    electronegativity: 1.65
     protons: 30
     valence_shells: [ 3d10, 4s2 ]
     mass: 65.38
@@ -335,6 +365,7 @@
     classification: transition_metal
 "Ga":
     name: Gallium
+    electronegativity: 1.81
     protons: 31
     valence_shells: [ 4s2, 4p1 ]
     mass: 69.723
@@ -346,6 +377,7 @@
     classification: post_transition_metal
 "Ge":
     name: Germanium
+    electronegativity: 2.01
     protons: 32
     valence_shells: [ 4s2, 4p2 ]
     mass: 72.630
@@ -357,6 +389,7 @@
     classification: metaloid
 "As":
     name: Arsenic
+    electronegativity: 2.18
     protons: 33
     valence_shells: [ 4s2, 4p3 ]
     mass: 74.921595
@@ -368,6 +401,7 @@
     classification: metaloid
 "Se":
     name: Selenium
+    electronegativity: 2.55
     protons: 34
     valence_shells: [ 4s2, 4p4 ]
     mass: 78.971
@@ -379,6 +413,7 @@
     classification: non_metal
 "Br":
     name: Bromine
+    electronegativity: 2.96
     protons: 35
     valence_shells: [ 4s2, 4p5 ]
     mass: 79.904
@@ -390,6 +425,7 @@
     classification: non_metal
 "Kr":
     name: Krypton
+    electronegativity: 3
     protons: 36
     valence_shells: [ 4s2, 4p6 ]
     mass: 83.798
@@ -401,6 +437,7 @@
     classification: noble_gas
 "Rb":
     name: Rubidium
+    electronegativity: 0.82
     protons: 37
     valence_shells: [ 5s1 ]
     mass: 85.4678
@@ -412,6 +449,7 @@
     classification: alkaili_metal
 "Sr":
     name: Strontium
+    electronegativity: 0.95
     protons: 38
     valence_shells: [ 5s2 ]
     mass: 87.62
@@ -423,6 +461,7 @@
     classification: alkaline_earth_metal
 "Y":
     name: Yttrium
+    electronegativity: 1.22
     protons: 39
     valence_shells: [ 4d1, 5s2 ]
     mass: 88.90584
@@ -434,6 +473,7 @@
     classification: null
 "Zr":
     name: Zirconium
+    electronegativity: 1.33
     protons: 40
     valence_shells: [ 4d2, 5s2 ]
     mass: 91.224
@@ -445,6 +485,7 @@
     classification: null
 "Nb":
     name: Niobium
+    electronegativity: 1.6
     protons: 41
     valence_shells: [ 4d4, 5s1 ]
     mass: 92.90637
@@ -456,6 +497,7 @@
     classification: null
 "Mo":
     name: Molybdenum
+    electronegativity: 2.16
     protons: 42
     valence_shells: [ 4d5, 5s1 ]
     mass: 95.95
@@ -467,6 +509,7 @@
     classification: null
 "Tc":
     name: Technetium
+    electronegativity: 1.9
     protons: 43
     valence_shells: [ 4d5, 5s2 ]
     mass: null
@@ -478,6 +521,7 @@
     classification: null
 "Ru":
     name: Ruthenium
+    electronegativity: 2.2
     protons: 44
     valence_shells: [ 4d7, 5s1 ]
     mass: 101.07
@@ -489,6 +533,7 @@
     classification: null
 "Rh":
     name: Rhodium
+    electronegativity: 2.28
     protons: 45
     valence_shells: [ 4d8, 5s1 ]
     mass: 102.90549
@@ -500,6 +545,7 @@
     classification: null
 "Pd":
     name: Palladium
+    electronegativity: 2.2
     protons: 46
     valence_shells: [ 4d10 ]
     mass: 106.42
@@ -511,6 +557,7 @@
     classification: null
 "Ag":
     name: Silver
+    electronegativity: 1.93
     protons: 47
     valence_shells: [ 4d10, 5s1 ]
     mass: 107.8682
@@ -522,6 +569,7 @@
     classification: null
 "Cd":
     name: Cadmium
+    electronegativity: 1.69
     protons: 48
     valence_shells: [ 4d10, 5s2 ]
     mass: 112.414
@@ -533,6 +581,7 @@
     classification: null
 "In":
     name: Indium
+    electronegativity: 1.78
     protons: 49
     valence_shells: [ 5s2, 5p1 ]
     mass: 114.818
@@ -544,6 +593,7 @@
     classification: null
 "Sn":
     name: Tin
+    electronegativity: 1.96
     protons: 50
     valence_shells: [ 5s2, 5p2 ]
     mass: 118.710
@@ -555,6 +605,7 @@
     classification: null
 "Sb":
     name: Antimony
+    electronegativity: 2.05
     protons: 51
     valence_shells: [ 5s2, 5p3 ]
     mass: 121.760
@@ -566,6 +617,7 @@
     classification: metaloid
 "Te":
     name: Tellurium
+    electronegativity: 2.1
     protons: 52
     valence_shells: [ 5s2, 5p4 ]
     mass: 127.60
@@ -577,6 +629,7 @@
     classification: metaloid
 "I":
     name: Iodine
+    electronegativity: 2.66
     protons: 53
     valence_shells: [ 5s2, 5p5 ]
     mass: 126.90447
@@ -588,6 +641,7 @@
     classification: non_metal
 "Xe":
     name: Xenon
+    electronegativity: 2.6
     protons: 54
     valence_shells: [ 5s2, 5p6 ]
     mass: 131.293
@@ -599,6 +653,7 @@
     classification: noble_gas
 "Cs":
     name: Cesium
+    electronegativity: 0.79
     protons: 55
     valence_shells: [ 6s1 ]
     mass: 132.90545196
@@ -610,6 +665,7 @@
     classification: alkaili_metal
 "Ba":
     name: Barium
+    electronegativity: 0.89
     protons: 56
     valence_shells: [ 6s2 ]
     mass: 137.327
@@ -621,6 +677,7 @@
     classification: alkaline_earth_metal
 "La":
     name: Lanthanum
+    electronegativity: 1.1
     protons: 57
     valence_shells: [ 5d1, 6s2 ]
     mass: 138.90547
@@ -632,6 +689,7 @@
     classification: null
 "Ce":
     name: Cerium
+    electronegativity: 1.12
     protons: 58
     valence_shells: [ 4f1, 5d1, 6s2 ]
     mass: 140.116
@@ -643,6 +701,7 @@
     classification: null
 "Pr":
     name: Praseodymium
+    electronegativity: 1.13
     protons: 59
     valence_shells: [ 4f3, 6s2 ]
     mass: 140.90766
@@ -654,6 +713,7 @@
     classification: null
 "Nd":
     name: Neodymium
+    electronegativity: 1.14
     protons: 60
     valence_shells: [ 4f4, 6s2 ]
     mass: 144.242
@@ -665,6 +725,7 @@
     classification: null
 "Pm":
     name: Promethium
+    electronegativity: null
     protons: 61
     valence_shells: [ 4f5, 6s2 ]
     mass: null
@@ -676,6 +737,7 @@
     classification: null
 "Sm":
     name: Samarium
+    electronegativity: 1.17
     protons: 62
     valence_shells: [ 4f6, 6s2 ]
     mass: 150.36
@@ -687,6 +749,7 @@
     classification: null
 "Eu":
     name: Europium
+    electronegativity: null
     protons: 63
     valence_shells: [ 4f7, 6s2 ]
     mass: 151.964
@@ -698,6 +761,7 @@
     classification: null
 "Gd":
     name: Gadolinium
+    electronegativity: 1.2
     protons: 64
     valence_shells: [ 4f7, 5d1, 6s2 ]
     mass: 157.25
@@ -709,6 +773,7 @@
     classification: null
 "Tb":
     name: Terbium
+    electronegativity: null
     protons: 65
     valence_shells: [ 4f9, 6s2 ]
     mass: 158.925354
@@ -720,6 +785,7 @@
     classification: null
 "Dy":
     name: Dysprosium
+    electronegativity: 1.22
     protons: 66
     valence_shells: [ 4f10, 6s2 ]
     mass: 162.500
@@ -731,6 +797,7 @@
     classification: null
 "Ho":
     name: Holmium
+    electronegativity: 1.23
     protons: 67
     valence_shells: [ 4f11, 6s2 ]
     mass: 164.930328
@@ -742,6 +809,7 @@
     classification: null
 "Er":
     name: Erbium
+    electronegativity: 1.24
     protons: 68
     valence_shells: [ 4f12, 6s2 ]
     mass: 167.259
@@ -753,6 +821,7 @@
     classification: null
 "Tm":
     name: Thulium
+    electronegativity: 1.25
     protons: 69
     valence_shells: [ 4f13, 6s2 ]
     mass: 168.934218
@@ -764,6 +833,7 @@
     classification: null
 "Yb":
     name: Ytterbium
+    electronegativity: null
     protons: 70
     valence_shells: [ 4f14, 6s2 ]
     mass: 173.045
@@ -775,6 +845,7 @@
     classification: null
 "Lu":
     name: Lutetium
+    electronegativity: 1.27
     protons: 71
     valence_shells: [ 5d1, 6s2 ]
     mass: 174.9668
@@ -786,6 +857,7 @@
     classification: null
 "Hf":
     name: Hafnium
+    electronegativity: 1.3
     protons: 72
     valence_shells: [ 5d2, 6s2 ]
     mass: 178.49
@@ -797,6 +869,7 @@
     classification: null
 "Ta":
     name: Tantalum
+    electronegativity: 1.5
     protons: 73
     valence_shells: [ 5d3, 6s2 ]
     mass: 180.94788
@@ -808,6 +881,7 @@
     classification: null
 "W":
     name: Tungsten
+    electronegativity: 2.36
     protons: 74
     valence_shells: [ 5d4, 6s2 ]
     mass: 183.84
@@ -819,6 +893,7 @@
     classification: null
 "Re":
     name: Rhenium
+    electronegativity: 1.9
     protons: 75
     valence_shells: [ 5d5, 6s2 ]
     mass: 186.207
@@ -830,6 +905,7 @@
     classification: null
 "Os":
     name: Osmium
+    electronegativity: 2.2
     protons: 76
     valence_shells: [ 5d6, 6s2 ]
     mass: 190.23
@@ -841,6 +917,7 @@
     classification: null
 "Ir":
     name: Iridium
+    electronegativity: 2.2
     protons: 77
     valence_shells: [ 5d7, 6s2 ]
     mass: 192.217
@@ -852,6 +929,7 @@
     classification: null
 "Pt":
     name: Platinum
+    electronegativity: 2.28
     protons: 78
     valence_shells: [ 5d9, 6s1 ]
     mass: 195.084
@@ -863,6 +941,7 @@
     classification: null
 "Au":
     name: Gold
+    electronegativity: 2.54
     protons: 79
     valence_shells: [ 5d10, 6s1 ]
     mass: 196.966570
@@ -874,6 +953,7 @@
     classification: null
 "Hg":
     name: Mercury
+    electronegativity: 2
     protons: 80
     valence_shells: [ 5d10, 6s2 ]
     mass: 200.592
@@ -885,6 +965,7 @@
     classification: null
 "Tl":
     name: Thallium
+    electronegativity: 1.62
     protons: 81
     valence_shells: [ 6s2, 6p1 ]
     mass: 204.38
@@ -896,6 +977,7 @@
     classification: post_transition_metal
 "Pb":
     name: Lead
+    electronegativity: 2.33
     protons: 82
     valence_shells: [ 6s2, 6p2 ]
     mass: 207.2
@@ -907,6 +989,7 @@
     classification: post_transition_metal
 "Bi":
     name: Bismuth
+    electronegativity: 2.02
     protons: 83
     valence_shells: [ 6s2, 6p3 ]
     mass: 208.98040
@@ -918,6 +1001,7 @@
     classification: post_transition_metal
 "Po":
     name: Polonium
+    electronegativity: 2
     protons: 84
     valence_shells: [ 6s2, 6p4 ]
     mass: null
@@ -929,6 +1013,7 @@
     classification: post_transition_metal
 "At":
     name: Astatine
+    electronegativity: 2.2
     protons: 85
     valence_shells: [ 6s2, 6p5 ]
     mass: null
@@ -940,6 +1025,7 @@
     classification: metaloid
 "Rn":
     name: Radon
+    electronegativity: null
     protons: 86
     valence_shells: [ 6s2, 6p6 ]
     mass: null
@@ -951,6 +1037,7 @@
     classification: noble_gas
 "Fr":
     name: Francium
+    electronegativity: 0.7
     protons: 87
     valence_shells: [ 7s1 ]
     mass: null
@@ -962,6 +1049,7 @@
     classification: alkaili_metal
 "Ra":
     name: Radium
+    electronegativity: 0.9
     protons: 88
     valence_shells: [ 7s2 ]
     mass: null
@@ -973,6 +1061,7 @@
     classification: alkaline_earth_metal
 "Ac":
     name: Actinium
+    electronegativity: 1.1
     protons: 89
     valence_shells: [ 6d1, 7s2 ]
     mass: null
@@ -984,6 +1073,7 @@
     classification: null
 "Th":
     name: Thorium
+    electronegativity: 1.3
     protons: 90
     valence_shells: [ 6d2, 7s2 ]
     mass: 232.0377
@@ -995,6 +1085,7 @@
     classification: null
 "Pa":
     name: Protactinium
+    electronegativity: 1.5
     protons: 91
     valence_shells: [ 5f2, 6d1, 7s2 ]
     mass: 231.03588
@@ -1006,6 +1097,7 @@
     classification: null
 "U":
     name: Uranium
+    electronegativity: 1.38
     protons: 92
     valence_shells: [ 5f3, 6d1, 7s2 ]
     mass: 238.02891
@@ -1017,6 +1109,7 @@
     classification: null
 "Np":
     name: Neptunium
+    electronegativity: 1.36
     protons: 93
     valence_shells: [ 5f4, 6d1, 7s2 ]
     mass: null
@@ -1028,6 +1121,7 @@
     classification: null
 "Pu":
     name: Plutonium
+    electronegativity: 1.28
     protons: 94
     valence_shells: [ 5f6, 7s2 ]
     mass: null
@@ -1039,6 +1133,7 @@
     classification: null
 "Am":
     name: Americium
+    electronegativity: 1.3
     protons: 95
     valence_shells: [ 5f7, 7s2 ]
     mass: null
@@ -1050,6 +1145,7 @@
     classification: null
 "Cm":
     name: Curium
+    electronegativity: 1.3
     protons: 96
     valence_shells: [ 5f7, 6d1, 7s2 ]
     mass: null
@@ -1061,6 +1157,7 @@
     classification: null
 "Bk":
     name: Berkelium
+    electronegativity: 1.3
     protons: 97
     valence_shells: [ 5f9, 7s2 ]
     mass: null
@@ -1072,6 +1169,7 @@
     classification: null
 "Cf":
     name: Californium
+    electronegativity: 1.3
     protons: 98
     valence_shells: [ 5f10, 7s2 ]
     mass: null
@@ -1083,6 +1181,7 @@
     classification: null
 "Es":
     name: Einsteinium
+    electronegativity: 1.3
     protons: 99
     valence_shells: [ 5f11, 7s2 ]
     mass: null
@@ -1094,6 +1193,7 @@
     classification: null
 "Fm":
     name: Fermium
+    electronegativity: 1.3
     protons: 100
     valence_shells: [ 5f12, 7s2 ]
     mass: null
@@ -1105,6 +1205,7 @@
     classification: null
 "Md":
     name: Mendelevium
+    electronegativity: 1.3
     protons: 101
     valence_shells: [ 5f13, 7s2 ]
     mass: null
@@ -1116,6 +1217,7 @@
     classification: null
 "No":
     name: Nobelium
+    electronegativity: 1.3
     protons: 102
     valence_shells: [ 5f14, 7s2 ]
     mass: null
@@ -1127,6 +1229,7 @@
     classification: null
 "Lr":
     name: Lawrencium
+    electronegativity: null
     protons: 103
     valence_shells: [ 7s2, 7p1 ]
     mass: null
@@ -1138,6 +1241,7 @@
     classification: null
 "Rf":
     name: Rutherfordium
+    electronegativity: null
     protons: 104
     valence_shells: [ 6d2, 7s2 ]
     mass: null
@@ -1149,6 +1253,7 @@
     classification: null
 "Db":
     name: Dubnium
+    electronegativity: null
     protons: 105
     valence_shells: [ 6d3, 7s2 ]
     mass: null
@@ -1160,6 +1265,7 @@
     classification: null
 "Sg":
     name: Seaborgium
+    electronegativity: null
     protons: 106
     valence_shells: [ 6d4, 7s2 ]
     mass: null
@@ -1171,6 +1277,7 @@
     classification: null
 "Bh":
     name: Bohrium
+    electronegativity: null
     protons: 107
     valence_shells: [ 6d5, 7s2 ]
     mass: null
@@ -1182,6 +1289,7 @@
     classification: null
 "Hs":
     name: Hassium
+    electronegativity: null
     protons: 108
     valence_shells: [ 6d6, 7s2 ]
     mass: null
@@ -1193,6 +1301,7 @@
     classification: null
 "Mt":
     name: Meitnerium
+    electronegativity: null
     protons: 109
     valence_shells: [ 6d7, 7s2 ]
     mass: null
